2005-11-11 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/rel-method.dox: Update for new configuration
	method, fix some typos.
	* doc/api/Makefile.am: replace "signal" in the comment
	by "vector" to reflect our changed naming convention.

2005-11-10 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Risto Eerola:
	* include/avr/io43u32x.h: Unify (old-style SIG_xxx)
	interrupt vector names.
	* include/avr/io43u35x.h: (Ditto.)
	* include/avr/io90pwmx.h: (Ditto.)
	* include/avr/iomx8.h: (Ditto.)
	* include/avr/iomxx4.h: (Ditto.)
	* include/avr/iotn11.h: (Ditto.)
	* include/avr/iotn12.h: (Ditto.)
	* include/avr/iotn15.h: (Ditto.)
	* include/avr/iotn2313.h: (Ditto.)
	* include/avr/iotn26.h: (Ditto.)
	* include/avr/iotnx5.h: (Ditto.)
	* doc/api/vectortable.dox: Regenerate, document the
	changes.
	patch #4505: Unified interrupt vector names in header files.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* fplib/fmod.S: Make labels local, add Id line.
	[Fixed bug #3573]

2005-11-10 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Galen Seitz:
	* avr-libc.spec.in: upgrade to current build system.
	[patch #4608] rpm spec file update

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* crt1/gcrt1.S: Make labels local, add Id line.

2005-11-10 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/doxygen.config.in: set SHOW_DIRECTORIES to NO, as we
	don't really use that feature, and enabling it yields junk
	"man pages" for the directory entries.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* libc/stdlib/ctype.S (isxdigit, ispunct, tolower, 
	toupper): Make labels local.
	* libc/stdlib/setjmp.S: add Id line.
	(setjmp): use X_movw instead LOAD_Z.
	(longjmp): use X_movw instead LOAD_X, use X_movw when possible.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* libc/stdlib/atoi.S: Make labels local, 
	use X_movw instead LOAD_Z.
	* libc/stdlib/atol.S: Make labels local, add Id line, 
	use X_movw instead LOAD_Z.
